packages/bastest/tests/cli/snapshots/snapshot_test__cli_writes_pending_snapshots_and_accepts_them__2.snap
---
source: tests/cli/snapshot_test.ts
---
status: 0
stdout:
  accepted 3 snapshots
stderr:
  <empty>
