packages/bastest/tests/cli/snapshots/snapshot_test__cli_writes_pending_snapshots_and_accepts_them__4.snap
---
source: tests/cli/snapshot_test.ts
---
status: 1
stdout:
  
  src/snapshot_test.ts
    records value ... fail (<duration>)
      AssertionError: snapshot mismatch
  snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap
  pending: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap.new
  
        actual
          "{\n  \"name\": \"bastest\",\n  \"marker\": \"import.meta.test\",\n  \"ok\": false\n}\n"
        expected
          "{\n  \"name\": \"bastest\",\n  \"marker\": \"import.meta.test\",\n  \"ok\": true\n}\n"
  
      snapshot: tests/fixtures/cli/snapshot/pending/src/snapshots/snapshot_test__records_value.snap
    duplicate name ... ok (<duration>)
    duplicate name ... ok (<duration>)
  
  fail | 2 passed | 1 failed | 0 ignored (<duration>)
stderr:
  <empty>
