packages/bastest/tests/cli/snapshots/snapshot_test__cli_writes_pending_snapshots_and_accepts_them__5.snap
---
source: tests/cli/snapshot_test.ts
---
status: 0
stdout:
  
  src/snapshot_test.ts
    records value ... ok (<duration>)
    duplicate name ... ok (<duration>)
    duplicate name ... ok (<duration>)
  
  ok | 3 passed | 0 failed | 0 ignored (<duration>)
stderr:
  <empty>
